# CareerQuest

./: .env.example  .gitignore  DELIVERY.md  QUICKSTART.md  README.md  start-all.sh
.qoder/agents/: ai-developer.md  architect-a.md  architect-b.md  architect-c.md  architecture-workflow.md  backend-developer.md  code-integrator.md  code-reviewer.md  critical-reviewer.md  database-developer.md  frontend-developer.md  product-manager.md  product-tester.md  senior-developer.md  solution-researcher.md  synthesizer.md
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css
docs/: API_PROTOCOL.md  ARCHITECTURE_DESCRIPTION.md  AVATAR_SYSTEM.md  MEMORY_SYSTEM.md  NAVIGATION_FLOW.md  achievements_requirements.md  requirements.md
docs/arch/: ACHIEVEMENT_ARCH.md  ARCH_DESIGN_v1.md  ARCH_DESIGN_v2.md  ARCH_DESIGN_v3.md  Evolved_ARCH.md  PSEUDO_CODE.md
docs/backend/: API.md
docs/debates/: debate_round_1.md
docs/frontend/: GUIDE.md
docs/reviews/: BUTTON_FIX_REPORT.md  INTEGRATION_REPORT.md  SURVEY_REFACTOR_INTEGRATION.md
docs/tasks/: avatar_emotion_tasks.md  friend_checkin_tasks.md  interview_feedback_report_tasks.md  memory_system_tasks.md  resume_designer_tasks.md  smart_task_system_tasks.md  survey_refactor_tasks.md  task_distribution.md  v2.1_tasks.md
pixel_animator/: .env.example  README.md  emotion_animator.py  generate_gif.py  pixel_animator.py  pyproject.toml  walk_gif.py
scripts/: generate_4k_background.py  generate_background.py
server/: .env.example  README.md  install.sh  pixelate_npcs.py  pnpm-lock.yaml  requirements.txt  start.sh
(+110 files in other folders)
